1.Transparent Nav bar 2.Dark mode in NavbarMenu 3.Improeved Home Page alingments 4.Skills section alignment corrected 5.Partial Dark mode in testimonials

--- a/app.scss
+++ b/app.scss
@@ -3,6 +3,9 @@
   font-family: var(--font-base);
   overflow: hidden;
 }
+.app::-webkit-scrollbar {
+  display: none;
+}
 .dark {
   background-color: #050816;
 }
