--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -65,11 +65,20 @@
   .tag-cmp::after {
     border-radius: 10px;
   }
-  .tag-cmp {
-    flex-direction: column;
-    margin-top: 3rem;
+  .badge-cmp {
     p {
       font-size: 0.9rem;
+    }
+    .head-text {
+      font-size: 2.2rem;
+    }
+  }
+  .tag-cmp {
+    flex-direction: column;
+    margin-top: 1.8rem;
+
+    p {
+      font-size: 1rem;
       width: 100%;
       text-transform: uppercase;
       text-align: right;
@@ -140,19 +149,28 @@
     flex-wrap: wrap;
     margin-left: 0;
     div {
-      margin: 1rem;
+      margin: 0rem;
+    }
+    div:nth-child(1) {
+      margin-left: -0.8rem;
+    }
+    div:nth-child(2) {
+      margin-right: 1rem;
+    }
+    div:nth-child(3) {
+      margin-left: -0.8rem;
     }
   }
 }
 .app__header-img {
-  flex: 1;
+  flex: 1.1;
   height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   position: relative;
   img {
-    width: 115%;
+    width: 125%;
     object-fit: contain;
     z-index: 1;
   }
@@ -166,6 +184,6 @@
     height: 90%;
   }
   @media screen and (max-width: 1200px) {
-    margin: 2rem 0;
+    margin: 4rem 0;
   }
 }
