--- a/components/Navbar/Navbar.scss
+++ b/components/Navbar/Navbar.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background: #040714;
+  background: #04071400;
   backdrop-filter: blur(4px);
   border: 0px solid rgba(255, 255, 255, 0.18);
   position: fixed;
@@ -91,7 +91,7 @@
     align-items: flex-end;
     flex-direction: column;
     background: url("../../assets/bgWhite.png");
-    background-color: var(--white-color);
+    background-color: #040714f9;
     background-size: cover;
     background-repeat: repeat;
 
